--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="menu">
             <p><a href="http://blog.wuwii.com" class="animate-init" rel="noopener noreferrer">Blog</a></p>
             <p><a href="https://github.com/kaimz" class="animate-init" rel="external nofollow noopener noreferrer">Github</a></p>
-            <p><a href="mailto:k@wuwii.com" class="animate-init" rel="external nofollow noopener noreferrer">Email</a></p>
+            <p><a href="mailto:k@wuwii.com" class="animate-init" rel="external nofollow noopener noreferrer">公众号</a></p>
         </div>
         <div class="location">
             <i class="location-icon"></i>
