--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="keywords" content="1075199251,张凯,18772383543,wuwii,追光者w,有梦想的咸鱼,一棵树站在原野上,Slience">
     <link rel="icon" href="http://blog.wuwii.com/images/favicon.ico?v=5.1.1" type="image/x-icon">
-    <title>Xuan</title>
+    <title>Lead!don't follow</title>
     <link rel="stylesheet" type="text/css" href="js/main.css"/>
 </head>
 
@@ -14,7 +14,7 @@
 <div class="vi">
     <div class="sidebar">
         <div class="header">
-            <h1>Wu</h1>
+            <h1>Xuan</h1>
             <div class="quote">
                 <p class="quote-text animate-init">
                     <span class="animate-init">Good,</span>
@@ -25,13 +25,13 @@
             </div>
         </div>
         <div class="menu">
-            <p><a href="http://blog.wuwii.com" class="animate-init" rel="noopener noreferrer">Blog</a></p>
-            <p><a href="https://github.com/kaimz" class="animate-init" rel="external nofollow noopener noreferrer">Github</a></p>
-            <p><a href="mailto:k@wuwii.com" class="animate-init" rel="external nofollow noopener noreferrer">公众号</a></p>
+            <p><a href="http://blog.wuwii.com" class="animate-init" rel="noopener noreferrer">文章</a></p>
+            <p><a href="https://github.com/micro-xuan" class="animate-init" rel="external nofollow noopener noreferrer">Github</a></p>
+            <p><a href="#" class="animate-init" rel="external nofollow noopener noreferrer">公众号</a></p>
         </div>
         <div class="location">
             <i class="location-icon"></i>
-            <span class="location-text animate-init">Wuhan - China</span>
+            <span class="location-text animate-init">Guangzhou - China</span>
         </div>
         <div class="relocating">
             Navigating to: <span class="relocate-location"></span>...
