--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div class="vi">
     <div class="sidebar">
         <div class="header">
-            <h1>Xuan</h1>
+            <h1>Welcome</h1>
             <div class="quote">
                 <p class="quote-text animate-init">
                     <span class="animate-init">Good,</span>
@@ -28,6 +28,9 @@
             <p><a href="http://blog.wuwii.com" class="animate-init" rel="noopener noreferrer">文章</a></p>
             <p><a href="https://github.com/micro-xuan" class="animate-init" rel="external nofollow noopener noreferrer">Github</a></p>
             <p><a href="#" class="animate-init" rel="external nofollow noopener noreferrer">公众号</a></p>
+            <p><a href="#" class="animate-init" rel="external nofollow noopener noreferrer">邮箱</a></p>
+            <p><a href="#" class="animate-init" rel="external nofollow noopener noreferrer">关于我们</a></p>
+            <p><a href="#" class="animate-init" rel="external nofollow noopener noreferrer">个人简历</a></p>
         </div>
         <div class="location">
             <i class="location-icon"></i>
