--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
             </div>
         </div>
         <div class="menu">
-            <p><a href="http://blog.wuwii.com" class="animate-init" rel="noopener noreferrer">文章</a></p>
+            <p><a href="https://mp.weixin.qq.com/s/pARjvcmhLY-FdhREziHzvA" class="animate-init" rel="noopener noreferrer">文章</a></p>
             <p><a href="https://github.com/micro-xuan" class="animate-init" rel="external nofollow noopener noreferrer">Github</a></p>
-            <p><a href="#" class="animate-init" rel="external nofollow noopener noreferrer">公众号</a></p>
+            <p><a href="https://mp.weixin.qq.com/s/pARjvcmhLY-FdhREziHzvA" class="animate-init" rel="external nofollow noopener noreferrer">公众号</a></p>
             <p><a href="#" class="animate-init" rel="external nofollow noopener noreferrer">邮箱</a></p>
             <p><a href="#" class="animate-init" rel="external nofollow noopener noreferrer">关于我们</a></p>
             <p><a href="#" class="animate-init" rel="external nofollow noopener noreferrer">个人简历</a></p>
