--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <p><a href="https://mp.weixin.qq.com/s/5X3H9b63zuwNMxTUW7tQ1w" class="animate-init" rel="external nofollow noopener noreferrer">公众号</a></p>
             <p><a href="#" class="animate-init" rel="external nofollow noopener noreferrer">邮箱</a></p>
             <p><a href="#" class="animate-init" rel="external nofollow noopener noreferrer">关于我们</a></p>
-            <p><a href="#" class="animate-init" rel="external nofollow noopener noreferrer">个人简历</a></p>
+            <p><a href="https://micro-xuan.github.io/based/" class="animate-init" rel="external nofollow noopener noreferrer">个人简历</a></p>
         </div>
         <div class="location">
             <i class="location-icon"></i>
